Registering meta implementation 'GstVideoBarMeta' without init function
I get critical assertions with some DVB stream (can be provided in private):
GStreamer-CRITICAL **: 08:48:09.309: Registering meta implementation 'GstVideoBarMeta' without init function
#4 0x0000fffff7ed07fc in gst_meta_register
(api=0xffffe006aa90 [GstVideoBarMetaAPI], impl=impl@entry=0xffffea6da708 "GstVideoBarMeta", size=size@entry=32, init_func=init_func@entry=0x0, free_func=free_func@entry=0x0, transform_func=transform_func@entry=0x0) at ../subprojects/gstreamer/gst/gstmeta.c:178
#5 0x0000ffffea6a3a64 in gst_video_bar_meta_get_info () at ../subprojects/gst-plugins-base/gst-libs/gst/video/video-anc.c:1251
#6 0x0000ffffea6a3b38 in gst_buffer_add_video_bar_meta
(buffer=buffer@entry=0xffffe0013480, field=field@entry=0 '\000', is_letterbox=1, bar_data1=0, bar_data2=0)
at ../subprojects/gst-plugins-base/gst-libs/gst/video/video-anc.c:1296